force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/LM_ProductLicenseUserAssignment__c.object-meta.xml
<CustomObject>
    <description>Object to represent product license assignment to users. This object will be populated based on the Product License query. It represents the analytical aspect required to determine product license utilization in a Salesforce Org</description>
    <label>Product License User Assignment</label>
    <nameField>
        <displayFormat>PLUN-{00000}</displayFormat>
        <label>Product License User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product License User Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>