force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to control whether the user assignment is active</description>
    <inlineHelpText>Control whether the assignment is active or not</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>