force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/fields/LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>LastLoginDate__c</fullName>
    <description>Last date where the user associated with this assignment logged in as per the last execution of the assignments jobs.</description>
    <inlineHelpText>Last date where the user associated with this assignment logged in as per the last execution of the assignments jobs.</inlineHelpText>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>