force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/fields/ProductLicense__c.field-meta.xml
<CustomField>
    <fullName>ProductLicense__c</fullName>
    <description>Product License associated with this assignment</description>
    <inlineHelpText>Insert the product license associated with this assignment</inlineHelpText>
    <label>Product License</label>
    <referenceTo>LM_ProductLicense__c</referenceTo>
    <relationshipName>ProductLicenseUserAssignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>