force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/fields/UniqueConstraint__c.field-meta.xml
<CustomField>
    <fullName>UniqueConstraint__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Field to be used to not allow for users to be assigned for more than one base license. The format of this field is the Username + &quot;_&quot; + Product License Type</description>
    <externalId>true</externalId>
    <inlineHelpText>Field to be used to not allow for users to be assigned for more than one base license.</inlineHelpText>
    <label>Unique Constraint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>