force-app/main/default/objects/LM_ProductLicenseUserAssignment__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description
  >Username of the user assigned to this product license. This is not a direct User lookup because of the multi-org capabilities of this app.</description>
    <inlineHelpText
  >Username of the user assigned to this product license. This is not a direct User lookup because of the multi-org capabilities of this app.</inlineHelpText>
    <label>Username</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>